# pivideo

./: CMakeLists.txt  readme.md
CMake/: arm-linux-gnueabihf.cmake
src/: main.cpp
